# ReversiGameClientSide

./: CMakeLists.txt  README.md  makefile
Tests/: AIPlayerTest.cpp  BoardClassTest.cpp  CellTest.cpp  RegularLogicTest.cpp
include/: Client.h  Game.h  RemotePlayer.h
src/: Client.cpp  ConsolePainter.cpp  Game.cpp  HumanPlayer.cpp  RemotePlayer.cpp  main.cpp
